Migrate to JDK 17